Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88708

qtwebengine compiler errors.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.15.2
    • WebEngine
    • None
    • Windows; vcpkg
    • Windows
    • 138a7203f16cf356e9d4dac697920a22437014b0 (qt/qtwebengine-chromium/83-based) 6baee91ad355676d8afe1a35d5c6bbc28458f2e5 (qt/qtwebengine-chromium/87-based) c881f6595e249781c2340fc912b721223ccc7a8f (qt/qtwebengine-chromium/88-based)

    Description

      Build failure due to:

      FAILED: obj/third_party/angle/angle_common/mathutil.obj 
      ninja -t msvc -e environment.x64 -- "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29333\bin\HostX64\x64/cl.exe" /nologo /showIncludes -DUSE_AURA=1 -DTOOLKIT_QT -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_RS2 -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -D_DEBUG -DDYNAMIC_ANNOTATIONS_ENABLED=1 -DANGLE_IS_64_BIT_CPU -DANGLE_ENABLE_DEBUG_ANNOTATIONS -I../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/include -I../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src -I../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src/common/third_party/base -Igen/angle -I../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/include /Gy /FS /bigobj /utf-8 /Zc:sizedDealloc- /wd4117 /D__DATE__= /D__TIME__= /D__TIMESTAMP__= /W4 /wd4091 /wd4127 /wd4251 /wd4275 /wd4312 /wd4324 /wd4351 /wd4355 /wd4503 /wd4589 /wd4611 /wd4100 /wd4121 /wd4244 /wd4505 /wd4510 /wd4512 /wd4610 /wd4838 /wd4995 /wd4996 /wd4456 /wd4457 /wd4458 /wd4459 /wd4200 /wd4201 /wd4204 /wd4221 /wd4245 /wd4267 /wd4305 /wd4389 /wd4702 /wd4701 /wd4703 /wd4661 /wd4706 /wd4715 /wd4003 /Od /Ob0 /GF /Zi /MDd /we4244 /we4456 /we4458 /we4715 /we4800 /we4838 /TP /wd4577 /GR- /c ../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src/common/mathutil.cpp /Foobj/third_party/angle/angle_common/mathutil.obj /Fd"obj/third_party/angle/angle_common_cc.pdb"
      ../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src/common/mathutil.cpp(75): error C4244: '=': conversion from 'double' to 'float', possible loss of data
      ../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src/common/mathutil.cpp(77): error C4244: '=': conversion from 'double' to 'float', possible loss of data
      ../../../../src/5.15.2-3da6929cb3.clean/src/3rdparty/chromium/third_party/angle/src/common/mathutil.cpp(79): error C4244: '=': conversion from 'double' to 'float', possible loss of data
      

      consider removing

      /we4244
      

      or fixing the conversion error.

      related vcpkg PR: https://github.com/microsoft/vcpkg/pull/14678

      Attachments

        1. build_1.patch
          0.6 kB
        2. build_2.patch
          1 kB
        3. build_3.patch
          1.0 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            neumann-a Alexander Neumann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes